--- a/nexter/sass/_base.scss
+++ b/nexter/sass/_base.scss
@@ -46,13 +46,21 @@ body {
 
 .container {
     display: grid;
+    grid-template-rows: 80vh -webkit-min-content 40vw repeat(3, -webkit-min-content);
     grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
+    grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start]
+        minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(-webkit-min-content, 14rem) [col-end]) [center-end]
+        minmax(6rem, 1fr) [full-end];
     grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start]
         minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end]
         minmax(6rem, 1fr) [full-end];
 
     @media only screen and (max-width: $bp-large) {
+        grid-template-rows: 6rem 80vh -webkit-min-content 40vw repeat(3, -webkit-min-content);
         grid-template-rows: 6rem 80vh min-content 40vw repeat(3, min-content);
+        grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start]
+            repeat(8, [col-start] minmax(-webkit-min-content, 14rem) [col-end]) [center-end]
+            minmax(6rem, 1fr) [full-end];
         grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start]
             repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end]
             minmax(6rem, 1fr) [full-end];
