--- a/nexter/sass/_features.scss
+++ b/nexter/sass/_features.scss
@@ -6,11 +6,13 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
     grid-gap: 6rem;
-    align-items: start;
+    -webkit-box-align: start;
+            align-items: start;
 }
 
 .feature {
     display: grid;
+    grid-template-columns: -webkit-min-content 1fr;
     grid-template-columns: min-content 1fr;
     grid-row-gap: 1.5rem;
     grid-column-gap: 2.5rem;
@@ -20,7 +22,8 @@
         width: 4.5rem;
         height: 4.5rem;
         grid-row: 1 / span 2;
-        transform: translateY(-1rem);
+        -webkit-transform: translateY(-1rem);
+                transform: translateY(-1rem);
     }
 
     &__text {
