--- a/nexter/sass/_gallery.scss
+++ b/nexter/sass/_gallery.scss
@@ -83,6 +83,7 @@
     &__img {
         width: 100%;
         height: 100%;
-        object-fit: cover;
+        -o-object-fit: cover;
+           object-fit: cover;
     }
 }
