--- a/nexter/sass/_homes.scss
+++ b/nexter/sass/_homes.scss
@@ -46,7 +46,8 @@
         background-color: $color-secondary;
         color: #fff;
         font-weight: 400;
-        transform: translateY(50%);
+        -webkit-transform: translateY(50%);
+                transform: translateY(50%);
     }
 
     &__btn {
@@ -65,8 +66,11 @@
         font-size: 1.5rem;
         margin-left: 2rem;
 
+        display: -webkit-box;
+
         display: flex;
-        align-items: center;
+        -webkit-box-align: center;
+                align-items: center;
 
         svg {
             fill: $color-primary;
